# orion

./: .gitignore  Cargo.toml  README.md  go.mod  go.sum  main.go
.github/workflows/: publish.yml  pull-request.yml
cmd/: article.go  build.go  init.go  pkged.go  root.go  serve.go  version.go
cmd/init/: config.yaml
cmd/init/articles/: 2019-12-31-markdown-demo.md  2020-01-01-welcome-to-your-blog.md
cmd/init/themes/orion/: article.html  index.html  template.html
scripts/: build.sh  package.sh
src/: article.rs  config.rs  main.rs  post.rs  serve.rs
src/article/: mod.rs
src/init/: mod.rs
src/init/static/: build.sh  config.toml  config.yaml
src/init/static/articles/: 2019-12-31-markdown-demo.md
src/init/static/posts/: 2019-12-31-markdown-demo.md  2020-01-01-welcome-to-your-blog.md
src/init/static/themes/orion/: index.html  post.html  style.css
src/init/static/themes/orion/assets/: style.css
src/parser/: markdown.rs  mod.rs
src/serve/: mod.rs
