[package]
name = "orion-ssg"
version = "1.0.1"
edition = "2021"
authors = ["Adrian Tombu <adrian@otso.fr>"]
keywords = ["generator", "static", "markdown", "html", "blog"]
categories = ["command-line-utilities", "value-formatting", "web-programming"]
description = "A static site generator to create a simple blog from Markdown files."
license = "GPL-3.0"
repository = "https://github.com/adriantombu/orion"
include = ["/src", "LICENSE.md", "README.md"]

[dependencies]
clap = { version = "4.0.14", features = ["derive"] }
rust-embed = { version="6.4.0", features = ["debug-embed", "compression", "include-exclude"] }
glob = "0.3.0"
gray_matter = "0.2.2"
pulldown-cmark = "0.9.1"
thiserror = "1.0.31"
tinytemplate = "1.2.1"
serde = { version = "1.0.139", features = ["derive"] }
rouille = "3.5.0"
toml = "0.5.9"
fs_extra = "1.2.0"
chrono = { version = "0.4", features = ["serde"] }
sitewriter = "0.5.3"
rss = "2.0.1"
slug = "0.1.4"
