[package]
name = "orion-ssg"
version = "1.0.8"
edition = "2021"
authors = ["Adrian Tombu <adrian@otso.fr>"]
keywords = ["generator", "static", "markdown", "html", "blog"]
categories = ["command-line-utilities", "value-formatting", "web-programming"]
description = "A static site generator to create a simple blog from Markdown files."
license = "GPL-3.0"
repository = "https://github.com/adriantombu/orion"
include = ["/src", "LICENSE.md", "README.md"]

[dependencies]
anyhow = "1.0.66"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0.14", features = ["derive"] }
console = "0.15.2"
fs_extra = "1.2.0"
glob = "0.3.0"
gray_matter = "0.2.2"
pulldown-cmark = "0.9.1"
quick-xml = "0.27.1"
rayon = "1.5.3"
rouille = "3.5.0"
rss = "2.0.1"
rust-embed = { version = "6.4.0", features = ["debug-embed", "compression", "include-exclude"] }
serde = { version = "1.0.139", features = ["derive"] }
slug = "0.1.4"
tinytemplate = "1.2.1"
toml = "0.6.0"
