[package]
name = "orion-ssg"
version = "1.1.3"
edition = "2021"
authors = ["Adrian Tombu <adrian@otso.fr>"]
keywords = ["generator", "static", "markdown", "html", "blog"]
categories = ["command-line-utilities", "value-formatting", "web-programming"]
description = "A static site generator to create a simple blog from Markdown files."
license = "GPL-3.0"
repository = "https://github.com/adriantombu/orion"
include = ["/src", "LICENSE.md", "README.md"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
console = "0.15"
fs_extra = "1.3"
glob = "0.3"
gray_matter = "0.2"
notify = "6"
pulldown-cmark = "0.9"
quick-xml = "0.30"
rayon = "1.7"
rouille = "3.6"
rss = "2.0"
rust-embed = { version = "8", features = ["debug-embed", "compression", "include-exclude"] }
serde = { version = "1", features = ["derive"] }
slug = "0.1"
tinytemplate = "1.2"
toml = "0.8"
